src/test/ui/wf/wf-struct-field.stderr
error[E0277]: the trait bound `A: Copy` is not satisfied
  --> $DIR/wf-struct-field.rs:12:11
   |
LL | struct IsCopy<T:Copy> {
   |                 ---- required by this bound in `IsCopy`
...
LL |     data: IsCopy<A>
   |           ^^^^^^^^^ the trait `Copy` is not implemented for `A`
   |
help: consider restricting type parameter `A`
   |
LL | struct SomeStruct<A: std::marker::Copy> {
   |                    ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
